--- a/ProBio.css
+++ b/ProBio.css
@@ -34,7 +34,7 @@
   text-align: center;
   float: left;
   padding: 40px 0;
-  background-color: var(--cyan);
+  background-color: var(--white);
   width: 250px;
 }
 
@@ -53,7 +53,7 @@
 }
 
 .about {
-  background-color: var(--lightteal);
+  background-color: var(--white);
   color: var(--black);
   display: grid;
   font-size: 24px;
@@ -74,14 +74,14 @@
 }
 
 .previous {
-  background-color: var(--cyan);
+  background-color: var(--white);
   color: var(--black);
   display: grid;
   font-size: 24px;
 }
 
 .projects {
-  background-color: var(--lightteal);
+  background-color: var(--white);
   color: var(--black);
   display: grid;
   font-size: 24px;
@@ -97,7 +97,7 @@
 }
 
 .contact {
-  background-color: var(--cyan);
+  background-color: var(--white);
   color: var(--black);
   display: grid;
   font-size: 24px;
