Moved contact info to bottom, changed links section to all be white, removed js file that did not effect website.

--- a/ProBio.css
+++ b/ProBio.css
@@ -22,7 +22,7 @@
 }
 
 .links {
-  background-color: var(--cyan);
+  background-color: var(--white);
   color: var(--black);
   display: grid;
   font-size: 24px;
